@@ -1,3 +1,12 @@
+2012-01-17  Rene Liebscher <R.Liebscher@gmx.de>
+
+	* usbasp.c: USB vid/pid/vendor/product from config file are used, for
+	id "usbasp" nibobee and old usbasp are tried as they were currently
+	implemented within usbasp
+	* avrdude.conf.in: added usb params to "usbasp", added new entry "nibobee"
+	with params which were hardcoded in usbasp.c, and added an entry
+	"usbasb-clone" which only checks vid/pid.
+
 2012-01-10  Rene Liebscher <R.Liebscher@gmx.de>
 
 	bug #35261 avrftdi uses wrong interface in avrftdi_paged_(write|load)
